# uvc_frame_detector

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  find_devicenumber.ps1  log.txt  run_oldmanandsea_g.bash  run_oldmanandsea_g.ps1  run_pcapng_oldmanandsea_g.bash  run_pcapng_oldmanandsea_g.ps1  run_uvcfd.bash  run_uvcfd.ps1  run_uvcfd.py  run_uvcfdp.bash  run_uvcfdp.ps1
documents/: FAQ.md  THIRD_PARTY_LICENSES.md
examples/: smpte.cpp  smpte.txt
gui/: CMakeLists.txt
gui/include/: dearimgui.hpp  gui_win.hpp  other_file.hpp  window_manager.hpp
gui/lib/: glfw3.lib
gui/src/: dearimgui.cpp  gui_win.cpp  other_file.cpp  screen.cpp  window_manager.cpp
include/: curse_ctrl.hpp  develope_photo.hpp  moncapler.hpp  moncapwer.hpp  rgb_to_jpeg.hpp  yuyv_to_rgb.hpp
include/curses/: curses_functions.hpp
include/gui/: dearimgui.hpp  gui_win.hpp  window_manager.hpp
include/libuvc/: libuvc_internal.h
include/utils/: circular_buffer.hpp  logger.hpp  tui_win.hpp  verbose.hpp
include/validuvc/: control_config.hpp  device_info.hpp  uvc_stream.hpp  uvcpheader_checker.hpp
scripts/: Dockerfile.debian  Dockerfile.windows  build.bash  clang-foramt.bash  clang-format.bash  docker_test.bash  docker_test.ps1  run.bash  run_uvcfd.bash  run_uvcfdp.bash
source/: CMakeLists.txt  appraiser.cpp  clm.cpp  control_config.cpp  curse_ctrl.cpp  cursed_output.cpp  curses.cpp  dearimgui.cpp  develope_photo.cpp  logger.cpp  moncapler.cpp  moncapwer.cpp  rgb_to_jpeg.cpp  show_graph.cpp  tui_win.cpp  uvc_stream.cpp  uvcpheader_checker.cpp  verbose.cpp  ytr.cpp  yuyv_to_rgb.cpp
source/gui/: dearimgui.cpp  gui_win.cpp  window_manager.cpp
source/image_develope/: develope_photo.cpp  rgb_to_jpeg.cpp
source/libuvc/: stream.c
source/tui/: tui_win.cpp
source/utils/: verbose.cpp
source/validuvc/: control_config.cpp  device_info.cpp  moncapler.cpp  uvc_stream.cpp  uvcpheader_checker.cpp
source/validuvc/linux/: CMakeLists.txt  README.md  moncapler.cpp
tests/: CMakeLists.txt  appraiser.cpp  circular_buffer.cpp  frame_test.cpp  frame_test_bulk.cpp  frame_test_iso.cpp  log_test.cpp  show_urb_header.cpp  test_packet_handler.cpp  tph_bulk_0.txt  tph_bulk_1.txt  tph_iso_0.txt  tph_iso_out.txt  urb_test.cpp  valid_test.cpp  whole_test.cpp
tests/change_shark/: brav_bulk.txt  brav_new.txt  input.txt  insta_bulk.txt  output.txt  phf.py  shkwhl.py  shkwhl_b.py  shkwhl_i.py
tests/clm/: cursed_output.hpp  st_con.cpp  tui_win.cpp
